--- a/plant_listener/CMakeLists.txt
+++ b/plant_listener/CMakeLists.txt
@@ -13,7 +13,7 @@ Project("Plant Listener")
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CXX_STANDARD 20)
+set(CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Grab nlohmann JSON
@@ -38,6 +38,7 @@ elseif("${CMAKE_BUILD_TYPE}" STREQUAL "debug")
     add_compile_options(-g -Wall)
 elseif("${CMAKE_BUILD_TYPE}" STREQUAL "release")
     add_compile_options(-Wall -Werror -O3)
+    add_link_options(-static-libstdc++) # Need to static link for rpi
 endif()
 
 add_subdirectory(devices)
