--- a/android/plant_tracker/app/build.gradle
+++ b/android/plant_tracker/app/build.gradle
@@ -53,11 +53,12 @@ dependencies {
     // For loading images from URLs
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'io.grpc:grpc-okhttp:1.60.0' // CURRENT_GRPC_VERSION
     implementation 'io.grpc:grpc-protobuf-lite:1.60.0' // CURRENT_GRPC_VERSION
     implementation 'io.grpc:grpc-stub:1.60.0' // CURRENT_GRPC_VERSION
     implementation 'org.apache.tomcat:annotations-api:6.0.53'
+    implementation 'androidx.activity:activity:1.9.1'
 }
