--- a/server/app/src/main/resources/config.json
+++ b/server/app/src/main/resources/config.json
@@ -7,6 +7,6 @@
         "db-user": "postgres",
         "db-pass": "planttracker",
         "db-name": "planttracker",
-        "log-level": "INFO"
+        "log-level": "DEBUG"
     }
 }
