--- a/android/plant_tracker/app/build.gradle
+++ b/android/plant_tracker/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace 'ca.planttracker'
@@ -61,4 +62,5 @@ dependencies {
     implementation 'io.grpc:grpc-stub:1.60.0' // CURRENT_GRPC_VERSION
     implementation 'org.apache.tomcat:annotations-api:6.0.53'
     implementation 'androidx.activity:activity:1.9.1'
+    implementation 'com.google.firebase:firebase-storage:21.0.0'
 }
