--- a/android/plant_tracker/app/src/main/AndroidManifest.xml
+++ b/android/plant_tracker/app/src/main/AndroidManifest.xml
@@ -16,14 +16,15 @@
         tools:targetApi="31">
         <activity
             android:name=".AddPlantActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ViewPlants"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ViewPlants"
+            android:exported="false">
         </activity>
     </application>
 
