--- a/android/plant_tracker/app/src/main/AndroidManifest.xml
+++ b/android/plant_tracker/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
 
     <application
         android:allowBackup="true"
@@ -15,6 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlantTracker"
         tools:targetApi="31">
+<!--        <service android:name=".java.MyFirebaseMessagingService" android:exported="false">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/plant_placeholder" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/green" />
         <activity
             android:name=".AddPlantActivity"
             android:exported="true">
