--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ render.experimental.xml
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+firebase-credentials.json
 
 # Android Profiling
 *.hprof
