continue working on notification and add app icon

--- a/android/plant_tracker/app/build.gradle
+++ b/android/plant_tracker/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'androidx.activity:activity:1.9.1'
     implementation 'com.google.firebase:firebase-storage:21.0.0'
     implementation 'com.google.firebase:firebase-messaging:24.0.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
 }
