--- a/plant_listener/CMakeLists.txt
+++ b/plant_listener/CMakeLists.txt
@@ -38,6 +38,7 @@ elseif("${CMAKE_BUILD_TYPE}" STREQUAL "debug")
     add_compile_options(-g -Wall)
 elseif("${CMAKE_BUILD_TYPE}" STREQUAL "release")
     add_compile_options(-Wall -Werror -O3)
+    add_link_options(-static-libstdc++)
 endif()
 
 add_subdirectory(devices)
