--- a/android/plant_tracker/app/build.gradle
+++ b/android/plant_tracker/app/build.gradle
@@ -58,8 +58,10 @@ protobuf {
 dependencies {
     // For loading images from URLs
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
