--- a/deployment/plantlistener.service
+++ b/deployment/plantlistener.service
@@ -5,6 +5,8 @@ After=network.target
 [Service]
 WorkingDirectory=/home/larryzero/plant_listener/
 ExecStart=/home/larryzero/plant_listener/bin/plant_listener -c ./config.json
+Restart=always
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
